--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -9,29 +9,29 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        id: checkout
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout repository
+#         id: checkout
+#         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        id: login-dockerhub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+#       - name: Log in to Docker Hub
+#         id: login-dockerhub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
-      - name: Generate tag
-        id: generate-tag
-        run: |
-          SHA=$(echo $GITHUB_SHA | head -c7)
-          echo "sha=$SHA" >> $GITHUB_OUTPUT
+#       - name: Generate tag
+#         id: generate-tag
+#         run: |
+#           SHA=$(echo $GITHUB_SHA | head -c7)
+#           echo "sha=$SHA" >> $GITHUB_OUTPUT
 
-      - name: Build and push Docker image to Docker Hub
-        id: build-image
-        env:
-          DOCKERHUB_REPOSITORY: ${{ vars.DOCKERHUB_REPOSITORY }}
-          IMAGE_TAG: ${{ steps.generate-tag.outputs.sha }}
-        run: |
-          docker build -t $DOCKERHUB_REPOSITORY:$IMAGE_TAG .
-          docker push $DOCKERHUB_REPOSITORY:$IMAGE_TAG
+#       - name: Build and push Docker image to Docker Hub
+#         id: build-image
+#         env:
+#           DOCKERHUB_REPOSITORY: ${{ vars.DOCKERHUB_REPOSITORY }}
+#           IMAGE_TAG: ${{ steps.generate-tag.outputs.sha }}
+#         run: |
+#           docker build -t $DOCKERHUB_REPOSITORY:$IMAGE_TAG .
+#           docker push $DOCKERHUB_REPOSITORY:$IMAGE_TAG
