chore: add volume to docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,15 @@
 services:
+  db:
+    image: postgres:latest
+    container_name: postgres
+    ports:
+     - 5432:5432
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=widget_server
+    volumes:
+      - db:/var/lib/postgresql/data
   app:
     build: .
     container_name: widget-server
@@ -10,4 +21,6 @@ services:
       - CLOUDFLARE_BUCKET=#
       - CLOUDFLARE_ACCOUNT_ID=#
       - CLOUDFLARE_PUBLIC_URL=http://localhost
-      
+
+volumes:
+  db:
